Keep omnibox visible on startup depending on startup params.

The omnibox is hidden when launching the app, but shown again if the
startup params are set to focus omnibox. This causes a visual flicker.
Passing around this argument makes it possible to not hide the omnibox
in the first place if it will be focused.

Bug: 754119
Change-Id: I4a4e4f759c2be2bbdaa028ec7c34e49745848189